build: copy html files from src to dist as rollup config

--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "rollup-plugin-typescript2": "^0.36.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@web/rollup-plugin-copy": "^0.5.1"
   }
 }
