--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "declaration": true,
+    "declarationDir": "types",
     "target": "es2020",
     "module": "es2020",
     "lib": ["es2020"],
